--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Hello World</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hello World</h1>
+        <p> Que bom te ver por aqui, fulano</p>
+
+    </header>
+
+    <section>
+        <h2>HTML</h2>
+        <P>HyperText Markup Language (Linguagem de Marcação de Hipertexto) estrutura sua página web</P>
+
+        <h2>CSS</h2>
+        <p>Cascading Style Sheets (Folhas de Estilo em Cascata), cria estilos padronizados na sua página web</p>
+        <img src="imagens/Mundo.jpg" alt="imagem com fundo azul e uma figura do planeta Terra a frente, com a inscrição Olá, mundo! em letras brancas"
+</section>
+
+<footer>
+    <p>Uma página desenvolvida por Ana P</p>
+
+
+</footer>
+
 </body>
 </html>
