--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
         <h1>Hello World</h1>
-        <p> Que bom te ver por aqui, fulano</p>
+        <p> Que bom te ver por aqui, <span id="nomme-usuário">fulano</span></p>
 
     </header>
 
     <section>
         <h2>HTML</h2>
-        <P>HyperText Markup Language (Linguagem de Marcação de Hipertexto) estrutura sua página web</P>
+        <P><span class="texto-inglês">HyperText Markup Language</span> (Linguagem de Marcação de Hipertexto) estrutura sua página web</P>
 
         <h2>CSS</h2>
-        <p>Cascading Style Sheets (Folhas de Estilo em Cascata), cria estilos padronizados na sua página web</p>
+        <p><span class="texto-inglês">Cascading Style Sheet</span>s (Folhas de Estilo em Cascata), cria estilos padronizados na sua página web</p>
         <img src="imagens/Mundo.jpg" alt="imagem com fundo azul e uma figura do planeta Terra a frente, com a inscrição Olá, mundo! em letras brancas"
 </section>
 
