Concluindo o main.js

--- a/index.html
+++ b/index.html
@@ -5,29 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <header>
         <h1>Hello World</h1>
-        <p> Que bom te ver por aqui, <span id="nomme-usuário">fulano</span></p>
-
+        <p>Que bom te ver por aqui, <span id="nome-usuário">Fulano</span></p>
     </header>
 
     <section>
         <h2>HTML</h2>
-        <P><span class="texto-inglês">HyperText Markup Language</span> (Linguagem de Marcação de Hipertexto) estrutura sua página web</P>
+        <P><span class="texto-inglês">Hypertext Markup Language </span>(em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P>
 
         <h2>CSS</h2>
-        <p><span class="texto-inglês">Cascading Style Sheet</span>s (Folhas de Estilo em Cascata), cria estilos padronizados na sua página web</p>
+        <P><span class="texto-inglês">Cascading Style Sheets </span>(em português, Folha de Estilo em Cascata) estiliza a sua página web</P>      
         <img src="imagens/Mundo.jpg" alt="imagem com fundo azul e uma figura do planeta Terra a frente, com a inscrição Olá, mundo! em letras brancas"
 </section>
 
 <footer>
     <p>Uma página desenvolvida por Ana P</p>
-
-
+    
 </footer>
-
+<script src="main.js"></script>
 </body>
 </html>
